# rAthenaFR-BotDiscord

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  (+3 more)
docs/: ACCOUNT_MANAGEMENT_FR.md  ARCHITECTURE_FR.md  COMMANDS_FR.md  CONFIGURATION_FR.md  CONTRIBUTOR_GUIDE_FR.md  CREDITS_FR.md  DATABASE_FR.md  DEPLOYMENT_FR.md  DEVELOPMENT_FR.md  DOCKER_FR.md  ENV_MIGRATION_FR.md  GMMSG_BRIDGE_FR.md  GMMSG_RATHENA_FR.md  INDEX_FR.md  INSTALLATION_FR.md  MIGRATION_FROM_GO_FR.md  RELEASE_FR.md  SECURITY_FR.md  TROUBLESHOOTING_FR.md  WINDOWS_APP_CONTROL_FR.md
locales/: de-DE.ftl  en-US.ftl  es-ES.ftl  fr-FR.ftl  ja-JP.ftl  ko-KR.ftl  zh-CN.ftl
scripts/: README_FR.md  build-release.cmd  build-release.ps1  ci.cmd  ci.ps1  clean-local-build.cmd  clean-local-build.ps1  dev-deploy.cmd  dev-deploy.ps1  dev-run.cmd  dev-run.ps1  docker-build.cmd  docker-build.ps1  docker-deploy.cmd  docker-deploy.ps1  docker-down.cmd  docker-down.ps1  docker-logs.cmd  docker-logs.ps1  docker-run.cmd  docker-up.cmd  docker-up.ps1
sql/: README_FR.md  create-account-management-user.sql  create-gmmsg-queue-user.sql  create-readonly-user.sql  discord_gmmsg_queue.sql  rathenafr_item_search.sql  rathenafr_mvp_data.sql  rathenafr_mvp_regular_spawn.sql  sql_updates.sql  verify-installation.sql
src/: cache.rs  main.rs
(+121 files in other folders)
